Add /get_topics and MQTT publish routes
